// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open CSIDivisionPicker, dark 1`] = `
{
  "lines": 289,
  "modalCount": 1,
  "sha256": "ec36fc4732b15281d425ef1a4f60c45f86b7e8530678d9cfe6240d9d5dd91fd4",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open CSIDivisionPicker, light 1`] = `
{
  "lines": 289,
  "modalCount": 1,
  "sha256": "27b1f149041c0947fb180b62f103191834511a072c4b32a204a2b86b66109aaf",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open DemoSeedPickerModal, dark 1`] = `
{
  "lines": 210,
  "modalCount": 1,
  "sha256": "757d001af7e6bcad318aaa541e2900713b0969ed7d2071482494bca6665a9d0a",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open DemoSeedPickerModal, light 1`] = `
{
  "lines": 210,
  "modalCount": 1,
  "sha256": "bdd516c699b56b81a06588998f67225816083b5ee69821320d27a52a575389a4",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open FeatureExplainerSheet, dark 1`] = `
{
  "lines": 49,
  "modalCount": 1,
  "sha256": "e86508eb19a04ca221548c5d16e7960c6706322afb1a332b3d179836b09e383d",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open FeatureExplainerSheet, light 1`] = `
{
  "lines": 49,
  "modalCount": 1,
  "sha256": "fc7ca33d5bac3abeb36d1d2ec55d6f849d603ec4fbc83dd20f41935978627283",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open HelpFab, dark 1`] = `
{
  "lines": 64,
  "modalCount": 1,
  "sha256": "62f070c89e4df38ade5e2da401f274f1ffc976d436216e2fcc028096eaf00ea6",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open HelpFab, light 1`] = `
{
  "lines": 64,
  "modalCount": 1,
  "sha256": "90bdb258c14142e730ffd0f499d7a326aa446f7e45bd7b800d5bf45011c67a3a",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open JobSwitcher, dark 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "2864b91fdfbfcce3e80a7d7ef8f0209916b598e1c210a46ae9db31fe3c63c4c8",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open JobSwitcher, light 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "082de57b176be75f84f6092731eabacc7d5e3374fe120f1f6f1f4f1e459aa319",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open PunchPhotoViewer, dark 1`] = `
{
  "lines": 14,
  "modalCount": 1,
  "sha256": "1198646f577c4bcd953c18525816e5cecd070afe11fa6c66fd69791775909b2b",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open PunchPhotoViewer, light 1`] = `
{
  "lines": 14,
  "modalCount": 1,
  "sha256": "1198646f577c4bcd953c18525816e5cecd070afe11fa6c66fd69791775909b2b",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open QuickUpdateClarifier, dark 1`] = `
{
  "lines": 99,
  "modalCount": 1,
  "sha256": "f0c78ba69443013cbe2c4f68229142f933548dc859274bf113b6ca36b02b3b12",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open QuickUpdateClarifier, light 1`] = `
{
  "lines": 99,
  "modalCount": 1,
  "sha256": "cb9131e7e0deac54f207c3c10096cc677c511035f1e1f222a7107431dfc3b635",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open RateProvenanceChip, dark 1`] = `
{
  "lines": 61,
  "modalCount": 1,
  "sha256": "bcfeb088f14ca6706b4bc5ea92870c8b75ccfe6b40429a3bb990d2f7eebca2eb",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open RateProvenanceChip, light 1`] = `
{
  "lines": 61,
  "modalCount": 1,
  "sha256": "0e405fe51429115c5ba4fc9a603bddf84595768805ca8cd6f119054b9cd7a2fe",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolbarActions, dark 1`] = `
{
  "lines": 20,
  "modalCount": 1,
  "sha256": "8d3e33a23c87a8ee7acb2efc556cda54bc5e055eab313656fb25eb63adbde972",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolbarActions, light 1`] = `
{
  "lines": 20,
  "modalCount": 1,
  "sha256": "d610727a8840f6441e334b4e01413dbaabdd2687b6281f928aebe3ba931cb50e",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolsSheet, dark 1`] = `
{
  "lines": 202,
  "modalCount": 1,
  "sha256": "aa817d0bc1ed8a6e8feef77b84063850b15f49296cc9fe3f81bb911c3469db0e",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolsSheet, light 1`] = `
{
  "lines": 202,
  "modalCount": 1,
  "sha256": "4230d97df735b513b532f11909282da5d97e0e6af82f880d9e3140a1faf5a608",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open VoiceCommandModal, dark 1`] = `
{
  "lines": 89,
  "modalCount": 1,
  "sha256": "470fbd775c2772cf21e4fa7c1af4b54d7724b81263ad8818a5dbecb5cfebc337",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open VoiceCommandModal, light 1`] = `
{
  "lines": 89,
  "modalCount": 1,
  "sha256": "256b6a5d704480004f2998eacd6536c895e60d48ed4b4ccc9684bdc299f30cd7",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag building-access 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 45,
      "sha256": "e727d1fa868b286c33850c0d72d134bb5b327141857c8fbf896e5dffbe736bbc",
      "title": "Book a Slot",
    },
  ],
  "whole": {
    "lines": 439,
    "sha256": "86b463eb32bc54b061bdc442b02058e24812a034847353e73b938a890fa83757",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag company-profile 1`] = `
{
  "modalCount": 7,
  "sheets": [
    {
      "found": true,
      "lines": 180,
      "sha256": "88f84e910e5d59eda68c4602d7d835c567f608bc8c6a1aa0cef33beeb4a0331c",
      "title": "Which state licenses you?",
    },
    {
      "found": true,
      "lines": 38,
      "sha256": "d81e1df5f4d60ca9fc51123c329bfec0b7b28acf5bcc15bc43a99ac904f5d9b9",
      "title": "Draw your signature",
    },
  ],
  "whole": {
    "lines": 723,
    "sha256": "3c81aa8a72803a0f76b294fad87d9fd322e6e6bfa8ede9ceb69dd737bb1e7422",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag discover/bids 1`] = `
{
  "modalCount": 6,
  "sheets": [
    {
      "found": true,
      "lines": 24,
      "sha256": "da4db05af4e59a3640783e617211258786c8488998e6e0c6b9d161b4882f1316",
      "title": "Sort by",
    },
    {
      "found": true,
      "lines": 39,
      "sha256": "19b4c622bae0a870d0a77a95925d5e5c9077dfa8b4dd1f25690120ebe310204a",
      "title": "Set-aside type",
    },
  ],
  "whole": {
    "lines": 608,
    "sha256": "d9a60d41eb4d70f260fb19eed56001a1fe8537949ce20b730d7fb6714a6c0ea6",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag equipment-detail (seeded machine) 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 22,
      "sha256": "185b6b241c293dc514fa73386e9be4ccaab496a4d9fe4298ea1a323dbd7bb5e5",
      "title": "Log Usage",
    },
  ],
  "whole": {
    "lines": 440,
    "sha256": "5c94be90013ed25f69c28bad9c429a71fb802b60af62ab89321c506f5a0cc615",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag equipment-detail 1`] = `
{
  "modalCount": 4,
  "sheets": [
    {
      "found": false,
      "title": "Log Usage",
    },
  ],
  "whole": {
    "lines": 319,
    "sha256": "6ebe9867ae14c1eb9dfbb793be702f83e225fdf70e817ef52bdbc3b74a6c2b05",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag get-verified 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 169,
      "sha256": "51e6a8fa734fe0ea975472576ae69fbc85b7ef856ccc9cf4dc415e46268973ec",
      "title": "Issuing state",
    },
  ],
  "whole": {
    "lines": 547,
    "sha256": "30eac1ae5f14710953eacc32968b949427eef40d28de7476d7ca4b30b2a07bff",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag lead-detail 1`] = `
{
  "modalCount": 8,
  "sheets": [
    {
      "found": true,
      "lines": 36,
      "sha256": "2cd0330f66effeed4754e4a5b7b6714b095c111f2f1354597bfc473750e3b12a",
      "title": "Why did this one go cold?",
    },
  ],
  "whole": {
    "lines": 610,
    "sha256": "d4abde612c0ad74a822d92ec5f10c3eececcfe736bea776d872a0b7dde2ccb33",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag materials/lumber 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 11,
      "sha256": "6753bf5faa2353efe8815a3bfc391d3c0d1d034ab2ce8808870849beb70ade63",
      "title": "Set price alert",
    },
  ],
  "whole": {
    "lines": 1657,
    "sha256": "1af20dc7a24b766fe69a81e83784fe9a6ccf598e8f1041fa68a732122f19777c",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag plan-intelligence 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 36,
      "sha256": "78b62dae5ba7feaf7a827f4bdb482b3022f83a9f1e321c2306aa295af3f6fb01",
      "title": "Save room",
    },
  ],
  "whole": {
    "lines": 387,
    "sha256": "5a67d1efed311933b74e291130c410c3301e56d3adf8bd29e7f9e7568e78f676",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag qbo-review 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 21,
      "sha256": "ed5a85914d09479887d6584cdeab52771c766d8c5fb4e1c311d37eddb27112e2",
      "title": "Which project is this cost for?",
    },
  ],
  "whole": {
    "lines": 360,
    "sha256": "1d5dcdbabfd41e0a4aa8abf0a4ac69aa8a72abcc43bb8db962a14646a8f3915c",
  },
}
`;
